--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-2">
             <div id="logo">
-                <img src="http://via.placeholder.com/80x80" alt=""> OmniPay
+                <img src="images/omnipay-logo.svg"/>
             </div>
             <div id="toc"></div>
         </div>
@@ -29,7 +29,7 @@
         </div>
     </div>
 </div>
-<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery-2.2.4.min.js"></script>
 <script src="js/marked.js"></script>
 <script src="js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 <script src="js/bootstrap-4b2/js/bootstrap.bundle.min.js"></script>
