css style update, cloudflare cache removal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="js/highlight/styles/androidstudio.css">
     <link rel="stylesheet" href="js/jquery.tocify.css">
     <link rel="stylesheet" href="js/bootstrap-4b2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/my-style.css">
+    <link rel="stylesheet" href="css/my-style.css?v2">
 </head>
 <body>
 
